feat: init backend, api call, basic ui

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "short-unique-id": "^4.4.4",
+    "store2": "^2.14.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
