--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "postcss": "^8.4.21",
